fix latex compile subgraph
