# backend/src/airas/core/types/coding_agent.py
@@ -1,0 +1,3 @@
+from typing import Literal
+
+GitHubActionsCodingAgent = Literal["open_code", "claude_code"]
